borsh/tests/snapshots/test_hash_map__1_element_generic_hashset.snap
---
source: borsh/tests/test_hash_map.rs
expression: data
---
[
    1,
    0,
    0,
    0,
    3,
    0,
    0,
    0,
    111,
    110,
    101,
]
