borsh/tests/snapshots/test_hash_map__1_element_hashmap.snap
---
source: borsh/tests/test_hash_map.rs
expression: data
---
[
    1,
    0,
    0,
    0,
    3,
    0,
    0,
    0,
    111,
    110,
    101,
    7,
    0,
    0,
    0,
    101,
    108,
    101,
    109,
    101,
    110,
    116,
]
