borsh/tests/snapshots/test_hash_map__8_element_generic_hashmap.snap
---
source: borsh/tests/test_hash_map.rs
expression: data
---
[
    8,
    0,
    0,
    0,
    9,
    0,
    0,
    0,
    100,
    105,
    102,
    102,
    101,
    114,
    101,
    110,
    116,
    3,
    0,
    0,
    0,
    97,
    114,
    101,
    3,
    0,
    0,
    0,
    107,
    101,
    121,
    6,
    0,
    0,
    0,
    112,
    111,
    119,
    101,
    114,
    115,
    4,
    0,
    0,
    0,
    107,
    101,
    121,
    115,
    6,
    0,
    0,
    0,
    97,
    108,
    119,
    97,
    121,
    115,
    4,
    0,
    0,
    0,
    109,
    111,
    114,
    101,
    2,
    0,
    0,
    0,
    111,
    102,
    7,
    0,
    0,
    0,
    110,
    111,
    119,
    104,
    101,
    114,
    101,
    4,
    0,
    0,
    0,
    112,
    105,
    108,
    101,
    3,
    0,
    0,
    0,
    111,
    110,
    101,
    7,
    0,
    0,
    0,
    101,
    108,
    101,
    109,
    101,
    110,
    116,
    7,
    0,
    0,
    0,
    118,
    97,
    114,
    105,
    111,
    117,
    115,
    3,
    0,
    0,
    0,
    116,
    119,
    111,
    5,
    0,
    0,
    0,
    119,
    104,
    101,
    114,
    101,
    13,
    0,
    0,
    0,
    117,
    110,
    112,
    114,
    101,
    100,
    105,
    99,
    116,
    97,
    98,
    108,
    101,
]
