borsh/tests/snapshots/test_hash_map__generic_hash_hashmap.snap
---
source: borsh/tests/test_hash_map.rs
expression: data
---
[
    2,
    0,
    0,
    0,
    3,
    0,
    0,
    0,
    102,
    111,
    111,
    3,
    0,
    0,
    0,
    98,
    97,
    114,
    3,
    0,
    0,
    0,
    111,
    110,
    101,
    3,
    0,
    0,
    0,
    116,
    119,
    111,
]
